--- a/base/package.json
+++ b/base/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "build": "sucrase -d src -o dist -t imports",
+    "build": "sucrase src -d dist -t imports",
     "start": "node dist/index.js"
   },
   "dependencies": {
